$Id: CHANGES,v 1.206 2003/01/10 14:42:47 stelian Exp $

Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
=======================================================================

1.	Added a note in the restore man page clarifying the question
	'set the permissions on the current directory ?' asked by
	restore at the end of treatment in -i and -x modes.

2.	Fixed the endianess issues when reading compressed tapes.
	Thanks to Dark Force <daq4th@users.sourceforge.net> for
	reporting this bug and providing test cases.

3.	Fixed the "ACL won't be dumped" warning message (which showed
	an extra, unrelated error message). Thanks to Dragan Krnic
	<dkrnic@lycos.com> for reporting this bug.

4.	Made dump look first into /etc/fstab, then into /etc/mtab 
	when searching for filesystem paths. Also fixed some problems
	caused by binding mounts or multiple block device mounts.
	Thanks to Matus Uhlar <uhlar@fantomas.sk>, Elliott Mitchell
	<ehem@m5p.com>, Greg Edwards <gedwards@users.sourceforge.net>.
	(fixes Debian bugs #147086 and #160305, Sourceforge bug #618699)

5.	Made dump's -I option accept the value '0' meaning all the
	read errors will be ignored. This can be useful when running
	dump from unattended sessions (like cron jobs). Thanks to
	John I Wang <jiwang@users.sourceforge.net> for the suggestion.

6.	Fixed the output of dump to indicate 'blocks' instead of
	'tape blocks' in the various messages (blocks are always
	1 Kilobyte, tape blocks are 1 BK * '-b' argument), and 
	made it clearly print the current blocksize at the start of
	a dump. Thanks to Michal Szymanski <msz@astrouw.edu.pl> for
	the suggestions.

7.	Made rmt understand long (largefiles) seeks.

Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
=======================================================================

1.	Changed dump to use fcntl(F_SETLK) style locking instead
	of flock() when locking the dumpdates file. With the old 