@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.206 2003/01/10 14:42:47 stelian Exp $
+$Id: CHANGES,v 1.207 2003/01/10 14:46:55 stelian Exp $
 
 Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
 =======================================================================
@@ -35,6 +35,9 @@ Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
 	the suggestions.
 
 7.	Made rmt understand long (largefiles) seeks.
+
+8.	Fixed build with very old versions of libext2fs, where
+	EXT2_FT_* constants were undefined.
 
 Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
 =======================================================================
